// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test textbox component render a Textbox component 1`] = `
<TextBox
  choices={
    Array [
      Array [
        "1",
        "one",
      ],
      Array [
        "2",
        "two",
      ],
    ]
  }
  helperProps={Object {}}
  kwargs={
    Object {
      "fields": Array [
        Object {
          "id": 1,
        },
        Object {
          "choices": Array [
            1,
            2,
          ],
        },
      ],
    }
  }
  label="test label"
  name="test name"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "test name",
          1,
        ],
      ],
    }
  }
  required={false}
  value="1"
  widget={
    Object {
      "attrs": Object {
        "cols": "a",
        "rows": "c",
      },
    }
  }
>
  <div
    className="form__group "
  >
    <label
      className="form__question form__question--char_field text_input"
    >
      <span>
        test label
      </span>
    </label>
    <HelperComponent />
    <div
      className="form__item"
    >
      <input
        name="test name"
        onChange={[Function]}
        type="text"
        value="1"
      />
    </div>
  </div>
</TextBox>
`;

exports[`Test textbox component with required & value empty render a Textbox component with required & value empty 1`] = `
<TextBox
  choices={
    Array [
      Array [
        "1",
        "one",
      ],
      Array [
        "2",
        "two",
      ],
    ]
  }
  helperProps={Object {}}
  kwargs={
    Object {
      "fields": Array [
        Object {
          "id": 1,
        },
        Object {
          "choices": Array [
            1,
            2,
          ],
        },
      ],
    }
  }
  label="test label"
  name="test name"
  onChange={[MockFunction]}
  required={true}
  value=""
  widget={
    Object {
      "attrs": Object {
        "cols": "a",
        "rows": "c",
      },
    }
  }
>
  <div
    className="form__group "
  >
    <label
      className="form__question form__question--char_field text_input"
    >
      <span>
        test label
      </span>
      <span
        className="form__required"
      >
         *
      </span>
    </label>
    <HelperComponent />
    <div
      className="form__item"
    >
      <input
        name="test name"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</TextBox>
`;
